minor changes added

--- a/index.html
+++ b/index.html
@@ -1012,7 +1012,7 @@
                         
                         <div class="certi-content">
                           <div class="certi-title">
-                            <h4>Angular NgIndia workshop associated by Geek97 (www.angular.io) </h4>
+                            <h4>Angular NgIndia workshop associated by Geek97 (angular.io) </h4>
                           </div>
                           <div class="certi-id">
                             <span>Web Development</span>
