--- a/index.html
+++ b/index.html
@@ -166,15 +166,20 @@
                 <div class="row">
                   <div class="col-sm-12 col-md-12 col-lg-12">
                     <div class="title-block">
+                      <div class="title-img">
+                        <img src="img/ankit.JPG" alt="Ankit Kumar Sharma" />
+                      </div>
                       <h2>Ankit Kumar Sharma</h2>
                       <h3>aks.computerexpert@gmail.com</h3>
                       <div class="owl-carousel text-rotation">
                         <div class="item">
                           <div class="sp-subtitle">Software Engineer</div>
                         </div>
-
                         <div class="item">
                           <div class="sp-subtitle">Trainer - Blogger</div>
+                        </div>
+                        <div class="item">
+                          <div class="sp-subtitle">Motivational Speaker</div>
                         </div>
                       </div>
                     </div>
@@ -1524,7 +1529,7 @@
                     <form
                       id="contact_form"
                       class="contact-form"
-                      action="/"
+                      action="/contact_form/email.php"
                       method="post"
                     >
                       <div class="messages"></div>
