add style & script files on global

--- a/src/index.html
+++ b/src/index.html
@@ -2,34 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Aaa</title>
+  <title>Ankit Kumar Sharma | Blogger </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="css/reset.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/bootstrap-grid.min.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/animations.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/perfect-scrollbar.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/owl.carousel.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/magnific-popup.css" type="text/css" />
-    <link rel="stylesheet" href="./assets/css/main.css" type="text/css" />
 </head>
 <body>
   <app-root></app-root>
   <script src="./assets/js/jquery.min.js"></script>
-    <script src="./assets/js/modernizr.custom.js"></script>
-    <script src="./assets/js/animating.js"></script>
-
-    <script src="./assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
-
-    <script src="./assets/js/perfect-scrollbar.min.js"></script>
-    <script src="./assets/js/jquery.shuffle.min.js"></script>
-    <script src="./assets/js/masonry.pkgd.min.js"></script>
-    <script src="./assets/js/owl.carousel.min.js"></script>
-    <script src="./assets/js/jquery.magnific-popup.min.js"></script>
-    <script src="./assets/js/jquery.googlemap.js"></script>
-    <script src="./assets/js/validator.js"></script>
-    <script src="./assets/js/main.js"></script>
 </body>
 </html>
