--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="./assets/js/jquery.min.js"></script>
   <script src="./assets/js/modernizr.custom.js"></script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DBEHHBS7LX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DBEHHBS7LX');
+</script>
 </head>
 <body>
   <app-root></app-root>
