--- a/src/assets/portfolio/angular/dynamic-forms-generation-v19/browser/index.html
+++ b/src/assets/portfolio/angular/dynamic-forms-generation-v19/browser/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>DynamicFormsGenerationV19</title>
-  <base href="http://localhost:4200/assets/portfolio/angular/dynamic-forms-generation-v19/browser/">
+  <base href="https://www.ankitkumarsharma.com/assets/portfolio/angular/dynamic-forms-generation-v19/browser/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
